# Sazgar

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: MainDistributionPipeline.yml
src/: lib.rs
test/sql/: sazgar.test
